--- a/src/protect/templates/layout/base.html
+++ b/src/protect/templates/layout/base.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     {% load staticfiles %}
+    {% load i18n %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="theme-color" content="#343a40"/>
@@ -16,7 +17,7 @@
     <a class="navbar-brand" href="{% url 'landing' %}">
         <img src="{% static 'img/trata-de-personas.jpg' %}" width="30" height="30"
              class="d-inline-block align-top rounded-circle" alt="">
-        Personas Desaparecidas
+        {% trans "Missing people" %}
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,24 +26,50 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item {% if active == 'inicio' %} active {% endif %}">
-                <a class="nav-link" href="{% url 'landing' %}">Incio <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{% url 'landing' %}">{% trans "introduction" %}
+                    <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item {% if active == 'missing' %} active {% endif %}">
-                <a class="nav-link" href="{% url 'missing_people' %}">Personas Perdidas</a>
+                <a class="nav-link" href="{% url 'missing_people' %}">{% trans "Missing people" %}</a>
             </li>
             <li class="nav-item {% if active == 'found' %} active {% endif %}">
-                <a class="nav-link" href="{% url 'found_people' %}">Buscan a sus familias</a>
+                <a class="nav-link" href="{% url 'found_people' %}">{% trans "They look for their families" %}</a>
             </li>
         </ul>
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="#">¿Qué hacer?</a>
+                <a class="nav-link" href="#">¿{% trans "What to do" %}?</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Reportar una persona</a>
+                <a class="nav-link" href="{% url 'report' %}">{% trans "Report a person" %}</a>
+            </li>
+            <li class="nav-item">
+                <a href="#" id="lenguaje-es" class="nav-link">
+                     <img src="{% static 'img/spain.png' %}" height="25" width="25">
+                     </a>
+            </li>
+            <li class="nav-item">
+                <a href="#" id="lenguaje-en" class="nav-link">
+                     <img src="{% static 'img/en.png' %}"  height="25" width="25">
+                     </a>
             </li>
         </ul>
     </div>
+    <form id="form-lenguaje" class="form-inline" action="{% url 'set_language' %}" method="post">{% csrf_token %}
+        <input name="next" type="hidden" value="{{ redirect_to }}"/>
+        <select id="select_lenguaje" name="language" class="form-control" hidden>
+            {% get_current_language as LANGUAGE_CODE %}
+            {% get_available_languages as LANGUAGES %}
+            {% get_language_info_list for LANGUAGES as languages %}
+            {% for language in languages %}
+            <option value="{{ language.code }}" {% if language.code == LANGUAGE_CODE %} selected{% endif %}>
+                {{ language.name_local }} ({{ language.code }})
+            </option>
+            {% endfor %}
+        </select>
+        <input type="submit" class="btn btn-outline-light" role="button" value="Go" hidden/>
+    </form>
+
 </nav>
 {% block body %} {% endblock %}
 </body>
